<resources>
    <string name="app_name">SlicedWork</string>

    <string name="painting">Painting</string>
    <string name="cleaning">Cleaning</string>
    <string name="gardening">Gardening</string>
    <string name="construction">Construction</string>
    <string name="electric">Electric</string>
    <string name="plumbing">Plumbing</string>

    <string-array name="occupation_areas">
        <item>@string/painting</item>
        <item>@string/cleaning</item>
        <item>@string/gardening</item>
        <item>@string/construction</item>
        <item>@string/electric</item>
        <item>@string/plumbing</item>
    </string-array>

    <!--Greetings-->
    <string name="greetings_login">Log In</string>
    <string name="greetings_register">Register</string>
    <string name="greetings_s" translatable="false">S</string>
    <string name="greetings_l" translatable="false">l</string>
    <string name="greetings_i" translatable="false">i</string>
    <string name="greetings_c" translatable="false">c</string>
    <string name="greetings_e" translatable="false">e</string>
    <string name="greetings_d" translatable="false">d</string>
    <string name="greetings_w" translatable="false">W</string>
    <string name="greetings_o" translatable="false">o</string>
    <string name="greetings_r" translatable="false">r</string>
    <string name="greetings_k" translatable="false">k</string>
    <string name="greetings_title">Welcome to SlicedWork</string>
    <string name="greetings_subtitle">The simplest way to find a work!</string>

    <!--Login-->
    <string name="login_title">Log In the app</string>
    <string name="login_subtitle">Enter your email and password to access the app.</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Log In</string>

    <!--Get Name-->
    <string name="get_name_title">What is your name?</string>
    <string name="get_name_subtitle">Enter the name that you use in real life.</string>
    <string name="get_name_first_name">First Name</string>
    <string name="get_name_last_name">Last Name</string>
    <string name="get_name_next">Next</string>

    <!--Get Birthday-->
    <string name="get_birthday_title">When were you born?</string>
    <string name="get_birthday_subtitle">Enter your date of birth.</string>
    <string name="get_birthday_next">Next</string>

    <string-array name="get_birthday_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!--Get Gender-->
    <string name="get_gender_title">What is your gender?</string>
    <string name="get_gender_subtitle">Choose the gender you identify with.</string>
    <string name="get_gender_male">Male</string>
    <string name="get_gender_female">Female</string>
    <string name="get_gender_other">Other</string>
    <string name="get_gender_next">Next</string>

    <!--GetPhoneNumber-->
    <string name="get_phone_number_title">What is your phone number?</string>
    <string name="get_phone_number_subtitle">Enter your phone number. Make sure to include the DDD.</string>
    <string name="get_phone_number_phone_number">Phone Number</string>
    <string name="get_phone_number_next">Next</string>

    <!--GetUsername-->
    <string name="get_username_title">Do you have a username?</string>
    <string name="get_username_subtitle">Enter a unique username that you like.</string>
    <string name="get_username_username">Username</string>
    <string name="get_username_next">Next</string>

    <!--GetEmail-->
    <string name="get_email_title">What is your email?</string>
    <string name="get_email_subtitle">Enter an email you usually use.</string>
    <string name="get_email_email" translatable="false">Email</string>
    <string name="get_email_next">Next</string>

    <!--GetPassword-->
    <string name="get_password_title">What is your password?</string>
    <string name="get_password_subtitle">Enter a password. Don\'t forget it huh.</string>
    <string name="get_password_password">Password</string>
    <string name="get_password_next">Next</string>

    <!--GetPicture-->
    <string name="get_picture_title">What will be your profile picture?</string>
    <string name="get_picture_subtitle">Take a picture or choose one from your gallery.</string>
    <string name="get_picture_next">Next</string>

    <!--ChooseCameraGallery-->
    <string name="choose_camera_gallery_take_a_picture">Take a picture</string>
    <string name="choose_camera_gallery_choose_from_gallery">Choose from gallery</string>

    <!--FinishRegisterUser-->
    <string name="finish_register_user_title">Register completed, click here to finish!</string>
    <string name="finish_register_user_finish">Finish</string>

    <!--GetDetails-->
    <string name="get_details_title">Vacancy details</string>
    <string name="get_details_subtitle">Enter the vacancy details.</string>
    <string name="get_details_task">Task</string>
    <string name="get_details_task_error">The task was not entered.</string>
    <string name="get_details_description">Description</string>
    <string name="get_details_occupation_area">Occupation Area</string>
    <string name="get_details_occupation_area_error">The occupation area was not entered</string>
    <string name="get_details_price">Price</string>
    <string name="get_details_price_error">The price has not been entered</string>
    <string name="get_details_next">Next</string>

    <!--GetAddress-->
    <string name="get_address_title">Vacancy address</string>
    <string name="get_address_subtitle">Enter your vacancy address.</string>
    <string name="get_address_country">Country</string>
    <string name="get_address_state">State</string>
    <string name="get_address_city">City</string>
    <string name="get_address_neighborhood">Neighborhood</string>
    <string name="get_address_postal_code">Postal Code</string>
    <string name="get_address_street">Street</string>
    <string name="get_address_number">Number</string>
    <string name="get_address_next">Next</string>

    <!--FinishRegisterVacancy-->
    <string name="finish_register_vacancy_finish">Finish</string>
    <string name="finish_register_vacancy_title">Register completed, click here to finish!</string>

    <!--Home-->
    <string name="home_applied_vacancies">Applied vacancies</string>
    <string name="home_announced_vacancies">Announced vacancies</string>
    <string name="home_profile">Profile</string>

    <!--VacancyDetails-->
    <string name="vacancy_details_occupation_area_label">Occupation Area</string>
    <string name="vacancy_details_task_label">Task</string>
    <string name="vacancy_details_description_label">Description</string>
    <string name="vacancy_details_price_label">Price</string>
    <string name="vacancy_details_localization_label">Localization</string>
    <string name="vacancy_details_contractor_label">Contractor</string>
    <string name="vacancy_details_apply_label">Apply</string>
    <string name="vacancy_details_go_to_profile">(Go to profile)</string>
    <string name="vacancy_details_status" translatable="false">Status</string>
    <string name="vacancy_details_opened">Opened</string>
    <string name="vacancy_details_closed">Closed</string>
    <string name="vacancy_details_finished">Finished</string>
    <string-array name="vacancy_details_status">
        <item>@string/vacancy_details_opened</item>
        <item>@string/vacancy_details_closed</item>
        <item>@string/vacancy_details_finished</item>
    </string-array>
    <string name="vacancy_details_delete">Delete</string>
    <string name="vacancy_detaild_apply_for">Apply For</string>
    <string name="vacancy_detaild_see_candidates">See Candidates</string>
    <string name="vacancy_detaild_finish_vacancy">Finish Vacancy</string>
    <string name="vacancy_details_worker_label">Worker</string>

    <!--Profile-->
    <string name="profile">Profile</string>
    <string name="profile_completed_works">Completed Works</string>
    <string name="profile_log_out">Log Out</string>

    <!--EditField-->
    <string name="edit_field_cancel">Cancel</string>
    <string name="edit_field_finish">Finish</string>

    <!--AnnouncedVacancies-->
    <string name="announced_vacancies_all">All</string>
    <string name="announced_vacancies_opened">Opened</string>
    <string name="announced_vacancies_closed">Closed</string>
    <string name="announced_vacancies_finished">Finished</string>
    <string name="announced_vacancies">Announced Vacancies</string>
    <string-array name="announced_vacancies_status">
        <item>@string/announced_vacancies_all</item>
        <item>@string/announced_vacancies_opened</item>
        <item>@string/announced_vacancies_closed</item>
        <item>@string/announced_vacancies_finished</item>
    </string-array>

    <!--AppliedVacancies-->
    <string name="applied_vacancies">Applied Vacancies</string>
    <string name="applied_vacancies_all">All</string>
    <string name="applied_vacancies_in_waiting">In waiting</string>
    <string name="applied_vacancies_approved">Approved</string>
    <string name="applied_vacancies_disapproved">Disapproved</string>
    <string-array name="applied_vacancies_status">
        <item>@string/applied_vacancies_all</item>
        <item>@string/applied_vacancies_in_waiting</item>
        <item>@string/applied_vacancies_approved</item>
        <item>@string/applied_vacancies_disapproved</item>
    </string-array>

    <!--Candidates-->
    <string name="candidates_title">Candidates</string>

    <!--ItemCandidate-->
    <string name="item_candidate_disapprove">Disapprove</string>
    <string name="item_candidate_approve">Approve</string>
    <string name="no_vacancy">There is no vacancy!</string>

</resources>