<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.slicedwork.slicedwork.presentation.viewmodel.GreetingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background_gradient"
        tools:context=".presentation.fragment.GreetingsFragment">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:scaleType="centerCrop"
            android:src="@drawable/tools"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,UseAppTint" />

        <TextView
            android:id="@+id/tv_s"
            style="@style/AppNameLetter"
            android:text="@string/greetings_s"
            android:textColor="@color/secondaryColor"
            app:layout_constraintEnd_toStartOf="@id/tv_l"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_l"
            style="@style/AppNameLetter"
            android:text="@string/greetings_l"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_i"
            app:layout_constraintStart_toEndOf="@+id/tv_s"
            app:layout_constraintTop_toTopOf="@+id/tv_s" />

        <TextView
            android:id="@+id/tv_i"
            style="@style/AppNameLetter"
            android:text="@string/greetings_i"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_c"
            app:layout_constraintStart_toEndOf="@+id/tv_l"
            app:layout_constraintTop_toTopOf="@+id/tv_l" />

        <TextView
            android:id="@+id/tv_c"
            style="@style/AppNameLetter"
            android:text="@string/greetings_c"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_e"
            app:layout_constraintStart_toEndOf="@+id/tv_i"
            app:layout_constraintTop_toTopOf="@+id/tv_i" />

        <TextView
            android:id="@+id/tv_e"
            style="@style/AppNameLetter"
            android:text="@string/greetings_e"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_d"
            app:layout_constraintStart_toEndOf="@+id/tv_c"
            app:layout_constraintTop_toTopOf="@+id/tv_c" />

        <TextView
            android:id="@+id/tv_d"
            style="@style/AppNameLetter"
            android:text="@string/greetings_d"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_w"
            app:layout_constraintStart_toEndOf="@+id/tv_e"
            app:layout_constraintTop_toTopOf="@+id/tv_e" />

        <TextView
            android:id="@+id/tv_w"
            style="@style/AppNameLetter"
            android:text="@string/greetings_w"
            android:textColor="@color/secondaryColor"
            app:layout_constraintEnd_toStartOf="@id/tv_o"
            app:layout_constraintStart_toEndOf="@+id/tv_d"
            app:layout_constraintTop_toTopOf="@+id/tv_d" />

        <TextView
            android:id="@+id/tv_o"
            style="@style/AppNameLetter"
            android:text="@string/greetings_o"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_r"
            app:layout_constraintStart_toEndOf="@+id/tv_w"
            app:layout_constraintTop_toTopOf="@+id/tv_w" />

        <TextView
            android:id="@+id/tv_r"
            style="@style/AppNameLetter"
            android:text="@string/greetings_r"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/tv_k"
            app:layout_constraintStart_toEndOf="@+id/tv_o"
            app:layout_constraintTop_toTopOf="@+id/tv_o" />

        <TextView
            android:id="@+id/tv_k"
            style="@style/AppNameLetter"
            android:text="@string/greetings_k"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toEndOf="@+id/tv_r"
            app:layout_constraintTop_toTopOf="@+id/tv_r" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/century_gothic"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:text="@string/greetings_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century_gothic"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:text="@string/greetings_subtitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/CommonButton"
            android:layout_width="0dp"
            android:layout_marginBottom="8dp"
            android:background="@color/secondaryColor"
            android:text="@string/greetings_login"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btn_register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/CommonButton"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="84dp"
            android:background="@color/white"
            android:text="@string/greetings_register"
            android:textColor="@color/secondaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>